--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.59",
     "js-md5": "^0.7.3",
+    "localforage": "^1.10.0",
     "vue": "^3.1.5",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.0"
