--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 VUE_APP_API="https://gateway.memall.shop/agent-back"
 VUE_APP_NEW_JSON_API="https://gateway.memall.shop/"
-VUE_APP_BASE_URL="https://assets.memall.shop/mingmo-admin/"
+VUE_APP_BASE_URL="./"
 VUE_APP_UPLOAD_API="https://temp.fingo.shop/fingo/product_manage/ImageUpload"
 VUE_APP_COUPON_URL="https://m.memall.shop/getCoupon?"
 VUE_APP_BASIC_URL = "https://m.memall.shop/"
