--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "compression-webpack-plugin": "^9.0.0",
     "core-js": "^3.8.3",
     "element-plus": "^1.0.2-beta.59",
     "js-md5": "^0.7.3",
     "localforage": "^1.10.0",
+    "mini-css-extract-plugin": "^1.3.0",
     "vue": "^3.1.5",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.0"
@@ -30,7 +32,8 @@
     "less-loader": "^10.0.1",
     "node-sass": "^6.0.1",
     "protobufjs": "^6.8.8",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "eslintConfig": {
     "root": true,
